Revamp project by getting rid of the Play framework